--- a/2019A/汇编.md
+++ b/2019A/汇编.md
@@ -342,10 +342,10 @@ seg_name ENDS
 ```
 
 - align_type
-  - para指定该段从小段边界开始；默认值
+  - para指定该段从小段边界开始,即起始地址二进制低4位为0；默认值
   - byte指定该段从任一位置开始
-  - WORD指定该段从字边界开始
-  - page指定该段从页边界开始
+  - WORD指定该段从字边界开始，即起始地址必须为偶数
+  - page指定该段从页边界开始,即起始地址二进制低8位为0
 - combine_type组合类型
   - PRIVATE 私有段，不合并；默认值
   - PUBLIC  该段连接时将与有相同名字的其他分段连接在一起，仅有一个起始地址
@@ -353,3 +353,158 @@ seg_name ENDS
   - STACK指定该段为堆栈段
 - ‘CLASS’类别
   - 连接时用于组成段组名
+
+### 伪指令
+
+#### 指定段址伪指令
+
+- `ASSUME 段寄存器:段名`
+- `ASSUME CS:CODE,DS:DATA,SS:SAT_SEG`
+  - 向汇编程序指示当前各段所用的段寄存器。设定段寄存器与段间的对应关系
+  - 本伪指令只是指示各逻辑段使用段寄存器的情况,并没有对段寄存器的内容进行装填。**DS、ES的值必须在程序段中用指令语句进行装填,而CS、SS由系统负责设置,程序中也可对SS进行装填**
+  - 如果没有在`ASSUME`中指定DS、ES,则在变量名或地址表达式前用段前缀进行明确说明,以指明所要使用的段寄存器。例如:`MOV AX, ES:ALFA`
+  - `ASSUME`伪指令也可以用来取消段寄存器与段之间的对应,然后再建立新的对应关系; `ASSUME DS:NOTHING; ASSUME DS:DATAB`
+
+#### 源程序结束伪指令END
+
+- `END [表达式]`
+  - 表达式为存储器地址，通常为标号。
+  - 标号为程序第一条可执行指令地址。
+- END表示一个模块的结束。通知汇编程序，源程序到此结束，且用表达式指出程序开始执行时的指令地址。
+  - 表达式只用于主程序模块中
+
+> 1. CS是系统在加载程序后由系统自动装填的，即由操作系统的任务(进程)管理程序自动完成装填的。此项装填不需要用户管理。堆栈段SS也可以不用用户装填,可由系统自动装填,此时必须在定义堆栈段伪指令中,把参数写全。其形式如下:
+> `STACK  SEGMENT   STACK  PARA ′STACK′`
+> 2. 当程序装入内存时,系统会自动地把堆栈段地址和栈指针置入SS和SP中,因而不必在代码段中装入SS和SP值。但如果没有给出必要的参数,则还应由用户装填SS和SP寄存器值
+> 3. DS、ES、SS的装填可以使用相同的方法,直接由用户程序进行加载
+> `MOV AX,DATA; MOV DS,AX`
+> 4. 若用MOV ES,AX 指令，此时,ES与DS将使用同一个逻辑数据段DATA
+
+#### 正确返回DOS的问题
+
+1. 用功能调用4CH
+    `MOV AH,4CH`  
+    `INT 21H`
+2. 用中断`INT 20H`
+3. 利用标准序结束程序
+
+    ``` ASM
+    PUSH DS    ;保存返回
+    SUB AX,AX  ;操作系统
+    PUSH AX    ;的指针
+    …
+    RET ;返回操作系统
+    ```
+
+#### 表达式赋值伪操作
+
+1. `常量名 EQU 表达式`
+2. “ = ” 伪操作 （允许重复定义）
+
+#### 地址计数器与对准伪操作
+
+- 地址计数器 `$`: 当前正在汇编的指令的地址
+- `ORG`：设置当前地址计数器的值
+
+    ``` ASM
+    data SEGMENT
+        ORG 10
+        VAL DW 1 ; val的偏移地址为0AH
+    data ENDS
+    ```
+
+- `EVEN` 使下一个变量或指令开始于偶数字节地址
+- `ALIGN boundary` 使下一个变量或指令开始于boundary倍数字节地址，**boundary必须为2的幂次**
+
+#### 表达式操作符
+
+1. 算术操作符：`+,-,*,/,MOD`
+2. 逻辑和移位操作符： `AND,OR,XOR,NOT,SHL,SHR`
+3. 关系操作符： `EQ,NE,LT,LE,GT,GE`
+    - 逻辑值：`真 0FFFFH; 假 0000H`
+4. 数值回送操作符： `OFFSET,SEG,TYPE,LENGTH,SIZE`
+    - `OFFSET/SEG`: 回送变量或标号的偏址/段址
+    - `TYPE`: 变量类型
+        |DB|DW|DD|DF|DQ|DT|NEAR|FAR|常数|
+        |--|--|--|--|--|--|----|---|----|
+        |1 |2 |4 |6 |8 |10|-1  |-2 |0   |
+    - `LENGTH`: 回送由DUP定义的变量的个数，其它情况回送1
+    - `SIZE`: LENGTH * TYPE
+5. 属性操作符: `PTR,段操作符,SHORT,THIS,HIGH,LOW,HIGH WORD,LOW WORD`
+
+    ``` ASM
+    类型 PTR 表达式     MOV WORD PTR [BX], 5
+    段操作符            MOV ES: [BX], AL
+    SHORT 标号          JMP SHORT  NEXT
+    THIS 类型           TA EQU THIS BYTE
+                        TD DW 1234H
+                        NEXT EQU THIS  FAR
+                        MOV AX,2
+    HIGH和LOW           CONS EQU 1234H
+                        MOV AH, HIGH CONS
+                        MOV AL, LOW CONS
+    ```
+
+## 第五章
+
+### 数据寻址方式
+
+![数据寻址方式](../res/12.png)
+
+### 转移地址的寻址方式
+
+![转移地址的寻址方式](../res/13.png)
+
+## 第六章
+
+### 过程定义伪操作
+
+``` ASM
+过程名   PROC    NEAR ( FAR )
+
+过程名   ENDP
+```
+
+1. `NEAR`属性：调用程序和子程序在同一代码段中（段内调用）
+2. `FAR`属性：调用程序和子程序不在同一代码段中（段间调用）
+
+### 子程序的调用与返回
+
+- `call near ptr subp`
+  1. 保存返回地址
+  2. 转子程序
+- `call far ptr subp`
+  1. 保存返回地址
+  2. 转子程序
+- 子程序返回： `ret`/`ret n`
+- 隐含使用堆栈保存返回地址
+
+### 保存与恢复寄存器
+
+1. 保护现场
+2. 取入口参数
+3. 处理
+4. 向出口参数输出结果
+5. 恢复现场
+6. 返回调用程序
+
+> **386之后**
+> `PUSHA`
+>
+> - 依次把`AX,CX,DX,BX,SP,BP,SI,DI`压入栈中
+> - SP-16->SP
+>
+> `POPA`
+>
+> - 把栈中的值依次弹到`DI,SI,BP,SP,BX,DX,CX,AX`寄存器中
+> - SP+16->SP
+>
+> `PUSHAD`
+>
+> - 依次把`EAX,ECX,EDX,EBX,ESP,EBP,ESI,EDI`压入栈中
+> - SP-32->SP
+>
+> `POPAD`
+>
+> - 把栈中的值依次弹到`EDI,ESI,EBP,ESP,EBX,EDX,ECX,EAX`寄存器中
+> - SP+32->SP
