--- a/2019A/汇编.md
+++ b/2019A/汇编.md
@@ -45,34 +45,34 @@
 ### 8086寻址
 
 1. 立即寻址方式 —— 操作数在指令中给出
-   - MOV AH, 3030H
+   - `MOV AH, 3030H`
    - 只能用于 SRC 字段
    - SRC 和 DST 的字长一致
 2. 寄存器寻址方式 — 操作数在指定的寄存器中
    - MOV  AX, BX
-   - 字节寄存器只有，AH  AL  BH  BL  CH  CL  DH  DL
+   - 字节寄存器只有，`AH  AL  BH  BL  CH  CL  DH  DL`
    - SRC 和 DST 的字长一致
    - CS 不能用 MOV 指令改变
 3. 直接寻址方式 — 有效地址EA由指令直接给出
-   - MOV AX, [2000H]
-   - 隐含的段为数据段 DS, 等价于 MOV AX, DS:[2000H]
-   - 可使用段跨越前缀 MOV  AX, ES:[2000H]
+   - `MOV AX, [2000H]`
+   - 隐含的段为数据段 DS, 等价于 `MOV AX, DS:[2000H]`
+   - 可使用段跨越前缀 `MOV  AX, ES:[2000H]`
    - 操作数地址可由变量（符号地址）表示, 但要注意变量的属性
    - 两操作数不能同时为存取器操作数
 4. 寄存器间接寻址 — EA 在基址寄存器(BX/BP)或变址寄存器(SI/DI)中
-   - MOV AX, [BX]
+   - `MOV AX, [BX]`
    - 不允许使用AX、CX、DX 存放 EA
    - SRC 和 DST 的字长一致
    - 适于数组、字符串、表格的处理
-   - 段跨越前缀：默认DS:[BX], SS:[BP], DS:[SI], DS:[DI]
+   - 段跨越前缀：默认`DS:[BX], SS:[BP], DS:[SI], DS:[DI]`
 5. 寄存器相对寻址方式
-   - MOV AX, COUNT[SI] 或 MOV AX, [COUNT+SI]
+   - `MOV AX, COUNT[SI]` 或 `MOV AX, [COUNT+SI]`
    - BX, BP, SI, DI,对应方式同(4
    - 适于数组、字符串、表格的处理
    - 支持段跨越前缀
-    >假设 (DS)=3000H, (SI)=2000H, COUNT=3000H,则: PA = 35000H
+    > 假设 (DS)=3000H, (SI)=2000H, COUNT=3000H,则: PA = 35000H
 6. 基址变址寻址方式
-   - MOV AX,[BX][DI] 或 MOV AX, [BX+DI] 或 MOV AX, ES:[BX][SI]
+   - `MOV AX,[BX][DI]` 或 `MOV AX, [BX+DI]` 或 `MOV AX, ES:[BX][SI]`
    - 适于数组、字符串、表格的处理
    - 必须是一个基址寄存器(BX/BP)和一个变址寄存器的组合(SI/DI)
    - 支持段跨越前缀
@@ -115,7 +115,7 @@
 
 ##### 所有通用寄存器进栈PUSHA/PUSHAD指令：PUSHA/PUSHAD/所有寄存器出栈POPA/POPAD指令
 
-- 执行操作：AX/EAX,CX/ECA,DX/EDX,BX/EBX,指令执行前的SP/ESP,BP/EBP,SI/ESI,DI/EDI依次进栈
+- 执行操作：`AX/EAX,CX/ECA,DX/EDX,BX/EBX`,指令执行前的`SP/ESP,BP/EBP,SI/ESI,DI/EDI`依次进栈
 - 执行操作：16位或32位通用寄存器按进栈的相反顺序出栈
 
 #### 交换XCHG(exchange)指令
@@ -279,21 +279,21 @@
 
 #### 子程序调用/返回指令
 
-- CALL
+- `CALL`
   - (SP)←(SP)-2
   - ((SP)+1,(SP))←(IP)
   - (IP)←(IP)+16位位移量
-- CALL 段间直接远调用
+- `CALL` 段间直接远调用
   - (SP)←(SP)-2
   - ((SP)+1,(SP))←(CS)
   - (SP)←(SP)-2
   - ((SP)+1,(SP)) ← (IP)
   - (IP) ← 偏移地址
   - (CS) ← 段地址
-- RET 段内近返回
+- `RET` 段内近返回
   - (IP) ← ( (SP)+1,(SP) )
   - (SP) ← (SP) + 2
-- RET 段间远返回
+- `RET` 段间远返回
   - (IP) ← ( (SP)+1,(SP) )
   - (SP) ← (SP) + 2
   - (CS) ← ( (SP)+1,(SP) )  
@@ -301,7 +301,7 @@
 
 #### 中断指令
 
-- INT TYPE
+- `INT TYPE`
   - (SP) ← (SP) - 2
   - ( (SP)+1,(SP) ) ← (FLAGS)
   - (SP) ← (SP) - 2
@@ -310,7 +310,7 @@
   - ( (SP)+1,(SP) ) ← (IP)
   - (IP) ← (TYPE*4)
   - (CS) ← (TYPE*4+2)
-- 溢出中断指令：INTO
+- 溢出中断指令：`INTO`
   - 若OF=1
     - (SP) ← (SP) - 2
     - ( (SP)+1,(SP) ) ← (FLAGS)
@@ -320,7 +320,7 @@
     - ( (SP)+1,(SP) ) ← (IP)
     - (IP) ← (10H)
     - (CS) ← (12H)
-- 从中断返回指令：IRET
+- 从中断返回指令：`IRET`
   - (IP) ← ( (SP)+1,(SP) )
   - (SP) ← (SP) + 2
   - (CS) ← ( (SP)+1,(SP) )
@@ -328,8 +328,8 @@
   - (FLAGS) ← ( (SP)+1,(SP) )
   - (SP) ← (SP) + 2
 - TYPE (0~255) 是中断类型号, 隐含的类型号为3
-- INT 指令还把 IF 和 TF 置0，但不影响其它标志位
-- IRET 指令执行完，标志位由堆栈中取出的值确定
+- `INT` 指令还把 IF 和 TF 置0，但不影响其它标志位
+- `IRET` 指令执行完，标志位由堆栈中取出的值确定
 
 ## 第四章
 
@@ -341,17 +341,17 @@ seg_name SEGMENT [align_type] [combine_type] [use_type][‘class’]
 seg_name ENDS
 ```
 
-- align_type
-  - para指定该段从小段边界开始,即起始地址二进制低4位为0；默认值
-  - byte指定该段从任一位置开始
-  - WORD指定该段从字边界开始，即起始地址必须为偶数
-  - page指定该段从页边界开始,即起始地址二进制低8位为0
-- combine_type组合类型
-  - PRIVATE 私有段，不合并；默认值
-  - PUBLIC  该段连接时将与有相同名字的其他分段连接在一起，仅有一个起始地址
-  - COMMON 该段连接时与其他同名分段有相同的起始地址，所以会产生覆盖
-  - STACK指定该段为堆栈段
-- ‘CLASS’类别
+- `align_type`
+  - `PARA`指定该段从小段边界开始,即起始地址二进制低4位为0；默认值
+  - `BYTE`指定该段从任一位置开始
+  - `WORD`指定该段从字边界开始，即起始地址必须为偶数
+  - `PAGE`指定该段从页边界开始,即起始地址二进制低8位为0
+- `combine_type`组合类型
+  - `PRIVATE` 私有段，不合并；默认值
+  - `PUBLIC`  该段连接时将与有相同名字的其他分段连接在一起，仅有一个起始地址
+  - `COMMON` 该段连接时与其他同名分段有相同的起始地址，所以会产生覆盖
+  - `STACK` 指定该段为堆栈段
+- `‘CLASS’`类别
   - 连接时用于组成段组名
 
 ### 伪指令
