--- a/2019A/汇编.md
+++ b/2019A/汇编.md
@@ -1,5 +1,16 @@
 # 汇编
 
+## 杂七杂八
+
+- ASCII
+  - `'0':30H; 'A':41H; 'a':61H; '-':2DH, '\n':0DH`
+  - 大写转小写: `OR AL,20H`/小写转大写: `AND AL,0DFH`
+- 中断，AH
+  - `01H`：键盘输入单字符，AL
+  - `02H`：屏幕输出单字符，DL
+  - `09H`：字符串输出DS:DX，`$`结尾
+  - `0AH`：字符输入，DS:DX,DS:(DX+1),AL是否有输入
+
 ## 第二章
 
 ### 通用寄存器
@@ -24,14 +35,14 @@
 
 |标志名|标志为1时|标志为0时|
 |---|---|---|
-|OF[Overflow Flag]|ov[OVerflow]|nv[Not oVerflow]|
-|DF[Direction Flag]|dn[DowN]|up[UP]|
-|IF[Interrupt Flag]|ei[Enable I~t]|di[Disable I~t]|
-|SF[Sign Flag]|ng[NeGative sign]|pl[PLus sign]|
-|ZF[Zero Flag]|zr[ZeRo]|nz[Not Zero]|
-|AF[Auxiliary carry Flag]|ac[Auxiliary Carry]|na[Not Aux~]|
-|PF[Parity Flag]|pe[Parity Even]|po[Parity Odd]|
-|CF[Carry Flag]|cy[CarrY]|nc[Not Carry]|
+|`OF`[Overflow Flag]|ov[OVerflow]|nv[Not oVerflow]|
+|`DF`[Direction Flag]|dn[DowN]|up[UP]|
+|`IF`[Interrupt Flag]|ei[Enable I~t]|di[Disable I~t]|
+|`SF`[Sign Flag]|ng[NeGative sign]|pl[PLus sign]|
+|`ZF`[Zero Flag]|zr[ZeRo]|nz[Not Zero]|
+|`AF`[Auxiliary carry Flag]|ac[Auxiliary Carry]|na[Not Aux~]|
+|`PF`[Parity Flag]|pe[Parity Even]|po[Parity Odd]|
+|`CF`[Carry Flag]|cy[CarrY]|nc[Not Carry]|
 
 ### 地址
 
@@ -49,7 +60,7 @@
    - 只能用于 SRC 字段
    - SRC 和 DST 的字长一致
 2. 寄存器寻址方式 — 操作数在指定的寄存器中
-   - MOV  AX, BX
+   - `MOV AX, BX`
    - 字节寄存器只有，`AH  AL  BH  BL  CH  CL  DH  DL`
    - SRC 和 DST 的字长一致
    - CS 不能用 MOV 指令改变
@@ -77,7 +88,7 @@
    - 必须是一个基址寄存器(BX/BP)和一个变址寄存器的组合(SI/DI)
    - 支持段跨越前缀
 7. 相对基址变址寻址方式
-   - MOV AX, MASK[BX][SI]
+   - `MOV AX, MASK[BX][SI]`
    - 支持段跨越前缀
 
 #### 默认段寄存器的使用规定
