--- a/2019A/汇编.md
+++ b/2019A/汇编.md
@@ -519,3 +519,57 @@ seg_name ENDS
 >
 > - 把栈中的值依次弹到`EDI,ESI,EBP,ESP,EBX,EDX,ECX,EAX`寄存器中
 > - SP+32->SP
+
+## 第八章
+
+### I/O 设备的数据传送方式
+
+- 查询方式（程序控制方式）
+  - 无条件传送：用于定时已知或数据变化非常缓慢的外部设备，要求有锁存能力
+    - 无条件输入：用IN
+    - 无条件输出：用OUT
+  - 有条件传送（程序查询方式）：具有外设状态标志位
+- 中断方式
+  - 要求外设有中断请求的“权力”
+  - 适用于实时控制
+- DMA (Direct Memory Access)方式（直接存储器存取方式/成组传送方式）
+  - 适用于高速、大量数据传送
+  - 需要设置DMA控制器，电路结构复杂，硬件开销大
+
+### CPU中断过程
+
+1. 取中断类型：CPU ← type  N；
+2. 保护现场：FLAGS、CS、IP入栈；
+3. IF=0,  TF=0；
+4. 取中断向量:(4×N)→IP, (4×N＋2)→CS;
+5. 转中断处理程序；
+6. 中断返回到INT指令的下一条指令。
+
+### DOS 功能调用(21H)存取中断向量：
+
+- 设置中断向量:
+  1. AH=25H
+  2. AL=中断类型号
+  3. DS:DX=中断向量(子程序地址)
+  4. INT 21H
+- 取中断向量:
+  1. AH=35H
+  2. AL=中断类型号
+  3. INT 21H
+  4. 返回时送 ES:BX=中断向量
+
+### 中断程序的编写步骤：
+
+- 主程序：
+  1. 设置中断向量
+  2. 设置 CPU 的中断允许位 IF
+  3. 设置设备的中断屏蔽位
+
+- 中断处理子程序：
+  1. 保存寄存器内容
+  2. 如允许中断嵌套，则开中断 ( STI )
+  3. 中断处理功能
+  4. 关中断
+  5. 送中断结束命令( EOI )给中断命令寄存器
+  6. 恢复寄存器内容
+  7. IRET中断返回
