--- a/2019A/计组.md
+++ b/2019A/计组.md
@@ -208,7 +208,7 @@
 
 - 指令格式如下：
 - ![ahh](../res/36.png)
-- 操作码θ   第一操作数A1   第二操作数A2      结果A3 
+- 操作码θ   第一操作数A1   第二操作数A2      结果A3
 - 功能描述
   - (A1)θ(A2)→A3
   - (PC) +1→PC
@@ -315,5 +315,109 @@
 - 硬布线控制器
   - 硬布线控制器，它是采用组合逻辑技术来实现的，其时序控制信号形成部件是由门电路组成的复杂树形网络。这种方法是分立元件时代的产物，以使用最少器件数和取得最高操作速度为设计目标。
   - 组合逻辑控制器的最大优点是速度快，但是时序控制信号形成部件的结构不规整，使得设计、调试、维修较困难，难以实现设计自动化。
+
+### 指令周期
+
+#### 指令周期的基本概念
+
+- 概念
+  - **指令周期**：指取指令、分析指令到执行完该指令所需的全部时间。
+  - **机器周期** 通常又称 **CPU周期**，**时钟周期**
+    - 通常把一条**指令周期**划分为若干个**机器周期**，每个机器周期完成一个基本操作。
+    - 主存的 **工作周期(存取周期)** 为基础来规定 **CPU周期**，比如，可以用CPU读取一个指令字的最短时间来规定CPU周期
+    - 不同的指令，可能包含不同数目的机器周期。
+    - 一个机器周期中，包含若干个机器周期（节拍脉冲或T脉冲）。
+    - CPU周期规定，不同的计算机中规定不同
+    - 在一个机器周期内，要完成若干个微操作。这些微操作有的可以同时执行，有的需要按先后次序串行执行。因而需要把一个机器周期分为若干个相等的时间段，每一个时间段称为一个节拍。节拍常用具有一定宽度的电位信号表示，称之为节拍电位。
+    - 节拍的宽度取决于CPU完成一次基本的微操作的时间，如：ALU完成一次正确的运算，寄存器间的一次数据传送等。
+- ![blaa](../res/42.png)
+
+#### meow
+
+- MOV指令的指令周期
+  - ![mov](../res/43.png)
+- LAD指令的指令周期
+  - ![load](../res/44.png)
+- ADD指令的指令周期
+  - ![add](../res/45.jpg)
+- STO指令的指令周期
+  - ![store](../res/45.png)
+- JMP指令的指令周期
+  - ![jmp](../res/46.png)
+  - `offset = addr - @ - 1, @:目标地址`
+
+#### 用方框图语言表示的指令周期
+
+- 方法：
+  - 指令系统设计（模型机的五指令系统）
+  - `方框`: 按CPU周期
+  - `方框内内容`: 数据通路操作或控制操作
+  - `菱形符号`: 判别或测试
+  - `~`: 公操作
+  - 前边所讲述的5种操作的框图描述
+  - ![f?](../res/47.png)
+
+### 微程序控制器
+
+> 基本思想：仿照解题的方法，把操作控制信号编制成微指令，存放到控制存储器里，运行时，从控存中取出微指令，产生指令运行所需的操作控制信号。从上述可以看出，微程序设计技术是用软件方法来设计硬件的技术
+
+#### 微程序控制原理
+
+- 微命令：控制部件向执行部件发出的各种控制命令叫作微命令，它是构成控制序列的最小单位。
+  - 例如：打开或关闭某个控制门的电位信号、某个寄存器的打入脉冲等。
+  - 微命令是控制计算机各部件完成某个基本微操作的命令。
+- 微操作：是微命令的操作过程。
+  - 微命令和微操作是一一对应的。
+  - 微命令是微操作的控制信号，微操作是微命令的操作过程。
+  - 微操作是执行部件中最基本的操作。
+  - 由于数据通路的结构关系，微操作可分为相容的和互斥的两种：
+    - 互斥的微操作，是指不能同时或不能在同一个节拍内并行执行的微操作。可以编码
+    - 相容的微操作，是指能够同时或在同一个节拍内并行执行的微操作。必须各占一位
+- 微指令：把在同一CPU周期内并行执行的微操作控制信息，存储在控制存储器里，称为一条微指令（`Microinstruction`）
+  - 它是微命令的组合，微指令存储在控制器中的控制存储器中
+  - 一条微指令通常至少包含两大部分信息
+    - 操作控制字段，又称微操作码字段，用以产生某一步操作所需的各个微操作控制信号。
+      - 某位为1，表明发微指令
+      - 微指令发出的控制信号都是节拍电位信号，持续时间为一个CPU周期
+      - 微命令信号还要引入时间控制
+    - 顺序控制字段，又称微地址码字段，用以控制产生下一条要执行的微指令地址。
+- 微程序
+  - 一系列微指令的有序集合就是微程序。
+    - 一段微程序对应一条机器指令。
+    - 微地址 ：存放微指令的控制存储器的单元地址
+  - ![ah](../res/49.jpg)
+
+##### 微程序控制器原理
+
+- ![50](../res/50.jpg)
+- 控制存储器(`μCM`)
+  - 这是微程序控制器的核心部件，用来存放微程序。其性能(包括容量、速度、可靠性等)与计算机的性能密切相关
+- 微指令寄存器(`μIR`)
+  - 用来存放从`μCM`取出的正在执行的微指令，它的位数同微指令字长相等。
+- 微地址形成部件
+  - 用来产生初始微地址和后继微地址，以保证微指令的连续执行。
+- 微地址寄存器(`μMAR`)
+  - 它接受微地址形成部件送来的微地址，为下一步从`μCM`中读取微指令作准备。
+- 微程序控制器的工作过程
+  1. 执行取指令的公共操作。取指令的公共操作通常由一段取指微程序来完成，在机器开始运行时，自动将取指微程序的入口微地址送`μMAR`，并从`μCM`中读出相应的微指令送入`μIR`。微指令的操作控制字段产生有关的微命令，用来控制实现取机器指令的公共操作。取指微程序的入口地址一般为`μCM`的0号单元，当取指微程序执行完后，从主存中取出的机器指令就已存人指令寄存器`IR`中了。
+  2. 由机器指令的操作码字段通过微地址形成部件产生出该机器指令所对应的微程序的入口地址，并送入`μMA`
+  3. 从`μCM`中逐条取出对应的微指令并执行之，每条微指令都能自动产生下一条微指令的地址
+  4. 一条机器指令对应的微程序的最后一条微指令执行完毕后，其下一条微指令地址又回到取指微程序的人口地址，从而继续第(1)步，以完成取下条机器指令的公共操作
+
+##### CPU周期和微指令周期的关系
+
+- ![51](../res/51.png)
+
+#### 机器指令与微指令的关系
+
+- ![52](../res/52.png)
+
+
+
+
+
+
+
+
 
 
