--- a/2019A/计组.md
+++ b/2019A/计组.md
@@ -412,11 +412,255 @@
 
 - ![52](../res/52.png)
 
+#### 微程序设计技术
 
+##### 微指令地址的形成
 
+- 入口地址：每条机器指令对应一段微程序，当公用的取指微程序从主存中取出机器指令之后，由机器指令的操作码字段指出各段微程序的入口地址，这是一种多分支(或多路转移)的情况。
+- 机器指令的操作码转换成初始微地址的方式主要有两种。
+  - 计数器的方式
+  - 多路转移的方式
 
+1. 入口地址形成：如果机器指令操作码字段的位数和位置固定，可以直接使操作码与微程序入口地址的部分位相对应
+   - ![ahh](../res/53.png)
+2. 后继微地址形成方法
+   1. 计数器的方式
+      - 方法：
+        - 微程序顺序执行时，其后继微地址就是现行微地址加上一个增量(通常为1)；
+        - 当微程序遇到转移或转子程序时，由微指令的转移地址段来形成转移微地址。
+        - 在微程序控制器中也有一个微程序计数器μPC，一般情况下都是将微地址寄存器μMAR作为μPC
+      - 特点：
+        - 优点是简单、易于掌握，编制微程序容易
+        - 缺点是这种方式不能实现两路以上的并行微程序转移，因而不利于提高微程序的执行速度。
+   2. 多路转移的方式
+      - 根据条件转移如图
+      - 条件：状态条件/测试/微指令中微地址/操作码
+      - ![ahh](../res/54.jpg)
 
+3. 微指令格式分为两类：水平型微指令和垂直型微指令
+   1. 水平型微指令
+      - 水平型微指令是指一次能定义并能并行执行多个微命令的微指令。
+      - 格式如下
+      - ![aa](../res/55.png)
+      - 优点：
+        - 微指令字较长，速度越快。
+        - 微指令中的微操作有高度的并行性。
+        - 微指令译码简单。
+        - 控制存储器的纵向容量小，灵活性强。
+      - 缺点：
+        - 微指令字比较长，明显地增加了控制存储器的横向容量。
+        - 水平微指令与机器指令差别很大，一般要熟悉机器结构、数据通路、时序系统以及指令执行过程的人才能进行微程序设计，这对用户来说是很困难的。
+   2. 垂直型微指令：采用编码方式。
+      - 设置微操作控制字段时，一次只能执行一到二个微命令的微指令称为垂直型微指令。
+      - ![ahh](../res/56.png)
+      - 垂直型微指令的特点：
+        - 微指令字短，一般为10～20位左右。
+        - 微指令的并行微操作能力有限，一条微指令一般只包含一个微操作命令。
+        - 微指令译码比较复杂。全部微命令用一个微操作控制字段进行编码，微指令执行时需行完全译码。
+        - 设计用户只需注意微指令的功能，而对微命令及其选择、数据通路的结构则不用过多地考虑，因此，便于用户编制微程序。而且，编制的微程序规整、直观，便于实现设计的自动化。
+        - 垂直微指令字较短，使控制存储器的横向容量少。
+        - 用垂直微指令编制微程序要使用较多的微指令，微程序较长；要求控制存储器的纵向容量大。垂直微指令产生微命令要经过译码，微程序执行速度慢。
+        - 不能充分利用数据通路具有多种并行操作能力
+   3. 水平型微指令和垂直型微指令的比较
+      1. 水平型微指令并行操作能力强，效率高，灵活性强，垂直型微指令则较差
+      2. 水平型微指令执行一条指令的时间短，垂直型微指令执行时间长
+      3. 由水平型微指令解释指令的微程序，有微指令字较长而微程序短的特点。垂直型微指令则相反
+      4. 水平型微指令用户难以掌握，而垂直型微指令与指令比较相似，相对来说，比较容易掌握
+   4. 动态微程序设计
+      - 对应于一台计算机的机器指令只有一组微程序，这一组微程序设计好之后，一般无须改变而且也不好改变，这种微程序设计技术称为静态微程序设计。 
+      - 采用EPROM作为控制存储器，可以通过改变微指令和微程序来改变机器的指令系统，这种微程序设计技术称为动态微程序设计。
 
+### 硬布线控制器
+
+1. 实现方法
+   - 通过逻辑电路直接连线而产生的，又称为组合逻辑控制方式
+2. 设计目标
+   - 使用最少元件（复杂的树形网络）
+   - 速度最高
+3. 逻辑原理
+   - ![ah](../res/57.png)
+   - 微操作控制信号产生
+     - 在微程序控制器中，微操作控制信号由微指令产生，并且可以重复使用
+     - 在硬联线控制器中，某一微操作控制信号由布尔代数表达式描述的输出函数产生
+     - 设计微操作控制信号的方法和过程是，根据所有机器指令流程图，寻找出产生同一个微操作信号的所有条件，并与适当的节拍电位和节拍脉冲组合，从而写出其布尔代数表达式并进行简化，然后用门电路或可编程器件来实现
+4. 设计步骤
+   1. 画出指令流程图
+   2. 列出微操作时间表
+      - 将指令流程图中的微操作合理地安排到各个机器周期的相应节拍和脉冲中去；
+      - 微操作时间表形象地表明：什么时间、根据什么条件发出哪些微操作信号。
+   3. 进行微操作信号的综合
+      - 当列出所有指令的微操作时间表之后，需要对它们进行综合分析，把凡是要执行某一微操作的所有条件(哪条指令、哪个机器周期、哪个节拍和脉冲等)都考虑在内，加以分类组合，列出各微操作产生的逻辑表达式，然后加以简化，使逻辑表达式更为合理
+   4. 实现电路
+      - 根据整理并化简的逻辑表达式组，可以用一系列组合逻辑电路加以实现，加根据逻辑表达式画出逻辑电路图，用逻辑门电路的组合来实现之，也可以直接根据逻辑表达式，用PLA或其他逻辑电路实现
+
+### 流水CPU
+
+#### 并行处理技术
+
+- 并行性（Parrelism）概念
+  - 问题中具有可以同时进行运算或操作的特性
+  - 例：在相同时延的条件下，用n位运算器进行n位并行运算速度几乎是一位运算器进行n位串行运算的n倍（狭义）
+- （广义）含义
+  - 只要在同一时刻（同时性）或在同一时间间隔内（并发性）完成两种或两种以上性质相同或- 不同的工作，他们在时间上相互重叠，都体现了并行性
+- 三种形式
+  - 时间并行（重叠）：让多个处理过程在时间上相互错开，轮流使用同一套硬件设备的各个部件，以加快硬件周转而赢得速度，实现方式就是采用流水处理部件
+  - 空间并行（资源重复）：以数量取胜
+    - 它能真正的体现同时性
+    - LSI和VLSI为其提供了技术保证
+  - 时间+空间并行
+    - Pentium中采用了超标量流水线技术
+
+#### 流水CPU的结构
+
+- 流水计算机的系统组成
+  - 存储器体系：主存采用多体交叉存储器；Cache
+  - 流水方式CPU：指令部件、指令队列、执行部件
+    - 指令流水线
+    - 指令队列：FIFO
+    - 执行部件：可以有多个采用流水线方式构成的算术逻辑部件构成，可以将定点运算部件和浮点运算部件分开。
+- 流水线CPU时空图
+  - IF（Instruction Fetch取指）
+  - ID（Instruction Decode指令译码）
+  - EX（Execution执行）
+  - WB（Write Back写回）
+  - ![agg](../res/58.png)
+- 非流水CPU
+  - ![ahh](../res/59.png)
+- 流水CPU
+  - ![agg](../res/60.png)
+- 超标量流水线
+  - 具有两条以上的指令流水线
+  - ![agg](../res/61.png)
+  - 上图中流水线满载时，每一个时钟周期可以执行2条指令
+  - 采用时间和空间并行技术
+- 流水线（Pipelining）的分类
+  - 按级别分为
+    - 指令流水线
+    - 算术流水线
+    - 处理机流水线（宏流水线）
+
+#### 流水线中的主要问题
+
+- 瓶颈问题（流水线中有速度慢的段）
+  - 再分成几个段
+  - 用资源重复的方法也可以解决
+- 资源相关：多条指令进入流水线后在同一时钟周期内争用同一功能部件。
+  - 解决办法：后边指令拖一拍再推进；增设一个功能部件
+- 数据相关
+  - RAW(Read After Write)
+    - 后面指令用到前面指令所写的数据
+  - WAW(Write After Write)
+    - 两条指令写同一个单元
+    - 在简单流水线中没有此类相关，因为不会乱序执行
+  - WAR(Write After Read)
+    - 后面指令覆盖前面指令所读的单元
+    - 在简单流水线中没有此类相关
+  - 解决办法：
+    - 可以推后后继指令对相关单元的读操作
+    - 设置相关的直接通路（Forwarding）
+- 控制相关
+  - 引起原因：转移指令
+  - 解决办法：延迟转移法，转移预测法
+
+## 总线系统
+
+### 总线的概念和结构形态
+
+#### 总线的基本概念
+
+- 数字计算机是由若干系统功能部件构成的，这些系统功能部件在一起工作才能形成一个完整的计算机系统
+- 总线定义：计算机的若干功能部件之间不可能采用全互联形式，因此就需要有公共的信息通道，即总线
+- 总线是构成计算机系统的互联机构，是多个系统功能部件之间进行数据传送的公共通路。借助于总线连接，计算机在各系统功能部件之间实现地址、数据和控制信息的交换，并在争用资源的基础上进行工作
+- 总线可分为以下几类：
+  - 内部总线：CPU内部连接各寄存器及运算器部件之间的总线
+  - 系统总线：外部总线。CPU和计算机系统中其他高速功能部件相互连接的总线
+  - I/O总线：中低速I/O设备相互连接的总线
+- 总线的特性可分为：物理特性、功能特性、电气特性、时间特性。
+  - 物理特性：总线的物理连接方式（根数、插头、插座形状，引脚排列方式）
+  - 功能特性：每根线的功能
+  - 电气特性：每根线上信号的传递方向及有效电平范围。
+  - 时间特性：规定了每根总线在什么时间有效
+- 相同的指令系统，相同的功能，不同厂家生产的各功能部件在实现方法上几乎没有相同的,但各厂家生产的相同功能部件却可以互换使用，其原因何在呢?
+  - 为了使不同厂家生产的相同功能部件可以互换使用，就需要进行系统总线的标准化工作。目前，已经出现了很多总线标准，如PCI、ISA等
+- 采用标准总线的优点
+  - 简化系统设计
+  - 简化系统结构，提高系统可靠性
+  - 便于系统的扩充和更新
+- 总线带宽：总线本身所能达到的最高传输速率
+  - 一次操作可以传输的数据位数
+  - 如S100为8位，ISA为16位，EISA为32位，PCI-2可达64位
+  - 总线宽度不会超过微处理器外部数据总线的宽度
+
+#### 总线的连接方式
+
+- 适配器（接口）：实现高速CPU与低速外设之间工作速度上的匹配和同步，并完成计算机和外设之间的所有数据传送和控制
+- 单机系统中总线结构的两种基本类型：
+  - 单总线：使用一条单一的系统总线来连接CPU、内存和I/O设备
+    - ![ahh](../res/62.jpg)
+    - 单总线结构特点：
+    - 在单总线结构中，要求连接到总线上的逻辑部件必须高速运行，以便在某些设备需要使用总线时，能迅速获得总线控制权；而当不再使用总线时，能迅速放弃总线控制权。否则，由于一条总线由多种功能部件共用，可能导致很大的时间延迟。
+  - 多总线：在CPU、主存、I/O之间互联采用多条总线
+    - ![ahh](../res/63.png)
+  - 高速的CPU总线：CPU和cache之间采用
+  - 系统总线：主存连在其上。
+  - 高速总线上可以连接高速LAN（100Mb/s局域网）、视频接口、图形接口、SCSI接口（支持本地磁盘驱动器和其他外设）、Firewire接口（支持大容量I/O设备）。高速总线通过扩充总线接口与扩充总线相连，扩充总线上可以连接串行方式工作的I/O设备。
+  - 通过桥CPU总线、系统总线和高速总线彼此相连。桥实质上是一种具有缓冲、转换、控制功能的逻辑电路。
+  - 多总线结构体现了高速、中速、低速设备连接到不同的总线上同时进行工作，以提高总线的效率和吞吐量，而且处理器结构的变化不影响高速总线。
+
+#### 总线的内部结构
+
+- 早期总线的内部结构如图所示，它实际上是处理器芯片引脚的延伸，是处理器与I/O设备适配器的通道。这种简单的总线一般也由50～100条线组成，这些线按其功能可分为三类：地址线、数据线和控制线
+  - ![AHH](../res/64.jpg)
+- 早期总线结构的不足之处在于：
+  - CPU是总线上惟一的主控者。即使后来增加了具有简单仲裁逻辑的DMA控制器以支持DMA传送，但仍不能满足多CPU环境的要求。
+  - 总线信号是CPU引脚信号的延伸，故总线结构紧密与CPU相关，通用性较差。
+- 当代流行的总线内部结构
+  - ![ahh](../res/65.jpg)
+  - 由地址线、数据线、控制线组成。其结构与简单总线相似，但一般是32条地址线，32或64条数据线。为了减少布线，64位数据的低32位数据线常常和地址线采用多路复用方式
+  - 仲裁总线：包括总线请求线和总线授权线
+  - 中断和同步总线：用于处理带优先级的中断操作，包括中断请求线和中断认可线
+  - 公用线：包括时钟信号线、电源线、地线、系统复位线以及加电或断电的时序信号线等
+  - 大多数计算机采用了分层次的多总线结构。
+  - 右图它是一个三层次的多总线结构即有CPU总线、PCI总线和ISA总线
+  - ![ahh](../res/66.jpg)
+
+#### 总线接口
+
+##### 信息的传送方式
+
+- 计算机系统中，传输信息基本有三种方式：
+  - 串行传送
+  - 并行传送
+  - 分时传送
+- 出于速度和效率上的考虑，系统总线上传送的信息必须采用并行传送方式。分时传送即总线的分时复用
+- 串行传送
+  - 使用一条传输线，采用脉冲传送。
+  - 主要优点是只需要一条传输线，这一点对长距离传输显得特别重要，不管传送的数据量有多少，只需要一条传输线，成本比较低廉。
+  - 缺点就是速度慢
+- 并行传送
+  - 每一数据位需要一条传输线，一般采用电位传送
+- 分时传送
+  - 总线复用或是共享总线的部件分时使用总线
+
+##### 总线接口的基本概念
+
+- 接口是CPU和主存、外设之间通过总线进行连接的逻辑部件
+- 接口的典型功能：控制、缓冲、状态、转换、整理、程序中断
+- 一个适配器的两个接口：一个同系统总线相连，采用并行方式，另外一个同设备相连，可能采用并行方式或是串行方式
+
+#### 总线的仲裁
+
+- 连接到总线上的功能模块有主动和被动两种形态，其中主方可以启动一个总线周期，而从方只能响应主方请求。每次总线操作，只能有一个主方，但是可以有多个从方
+- 为了解决多个功能模块争用总线的问题，必须设置总线仲裁部件
+- 总线占用期：主方持续控制总线的时间
+- 按照总线仲裁电路的位置不同，仲裁方式分为集中式和分布式两种
+
+##### 集中式仲裁
+
+- 集中式仲裁有三种：
+  - 链式查询方式：离中央仲裁器最近的设备具有最高优先权，离总线控制器越远，优先权越低。
+    - 优点：只用很少几根线就能按一定优先次序实现总线控制，并且这种链式结构很容易扩充设备。
+    - 缺点：是对询问链的电路故障很敏感，优先级固定
 
 
 
