计组好难啊

--- a/2019A/计组.md
+++ b/2019A/计组.md
@@ -264,9 +264,9 @@
 
 - 格式
 
-|cond|F|I|opcode|S|Rn|Rd|operand 2|
-|----|-|-|------|-|--|--|---------|
-|4位|2位|1位|4位|1位|4位|4位|12位|
+| cond | F   | I   | opcode | S   | Rn  | Rd  | operand 2 |
+| ---- | --- | --- | ------ | --- | --- | --- | --------- |
+| 4位  | 2位 | 1位 | 4位    | 1位 | 4位 | 4位 | 12位      |
 
 - opcode：操作码
 - Rd：目标寄存器
@@ -467,8 +467,8 @@
       3. 由水平型微指令解释指令的微程序，有微指令字较长而微程序短的特点。垂直型微指令则相反
       4. 水平型微指令用户难以掌握，而垂直型微指令与指令比较相似，相对来说，比较容易掌握
    4. 动态微程序设计
-      - 对应于一台计算机的机器指令只有一组微程序，这一组微程序设计好之后，一般无须改变而且也不好改变，这种微程序设计技术称为静态微程序设计。 
-      - 采用EPROM作为控制存储器，可以通过改变微指令和微程序来改变机器的指令系统，这种微程序设计技术称为动态微程序设计。
+      - 对应于一台计算机的机器指令只有一组微程序，这一组微程序设计好之后，一般无须改变而且也不好改变，这种微程序设计技术称为静态微程序设计
+      - 采用EPROM作为控制存储器，可以通过改变微指令和微程序来改变机器的指令系统，这种微程序设计技术称为动态微程序设计
 
 ### 硬布线控制器
 
@@ -562,7 +562,7 @@
   - 引起原因：转移指令
   - 解决办法：延迟转移法，转移预测法
 
-## 总线系统
+## 第六章
 
 ### 总线的概念和结构形态
 
@@ -657,11 +657,258 @@
 
 ##### 集中式仲裁
 
+- ![ahh](../res/69.png)
 - 集中式仲裁有三种：
-  - 链式查询方式：离中央仲裁器最近的设备具有最高优先权，离总线控制器越远，优先权越低。
-    - 优点：只用很少几根线就能按一定优先次序实现总线控制，并且这种链式结构很容易扩充设备。
-    - 缺点：是对询问链的电路故障很敏感，优先级固定
+  1. 链式查询方式：
+     - 离中央仲裁器最近的设备具有最高优先权，离总线控制器越远，优先权越低。
+     - ![ahh](../res/67.jpg)
+     - 优点：只用很少几根线就能按一定优先次序实现总线控制，并且这种链式结构很容易扩充设备。
+     - 缺点：是对询问链的电路故障很敏感，优先级固定
+  2. 计数器定时查询方式：
+     1. 总线上的任一设备要求使用总线时，通过BR线发出总线请求。
+     2. 中央仲裁器接到请求信号以后，在BS线为“0”的情况下让计数器开始计数，计数值通过一组地址线发向各设备。每个设备接口都有一个设备地址判别电路，当地址线上的计数值与请求总线的设备地址相一致时，该设备 置“1”BS线，获得了总线使用权，此时中止计数查询
+     3. 每次计数可以从“0”开始，也可以从中止点开发始。如果从“0”开始，各设备的优先次序与链式查询法相同，优先级的顺序是固定的。如果从中止点开始，则每个设备使用总线的优级相等。
+     - 计数器的初值也可用程序来设置，这可以方便地改变优先次序，但这种灵活性是以增加线数为代价的。可方便的改变优先级
+  3. 独立请求方式
+     - 每一个共享总线的设备均有一对总线请求线BRi和总线授权线BGi。当设备要求使用总线时，便发出该设备的请求信号。总线仲裁器中有一个排队电路，它根据一定的优先次序决定首先响应哪个设备的请求，给设备以授权信号BGi。独立请求方式的优点是响应时间快，即确定优先响应的设备所花费的时间少，用不着一个设备接一个设备地查询。其次，对优先次序的控制相当灵活。它可以预先固定，例如BR0优先级最高，BR1次之…BRn最低；也可以通过程序来改变优先次序；还可以用屏蔽（禁止）某个请求的办法，不响应来自无效设备的请求。因此当代总线标准普遍采用独立请求方式
+     - 独立请求方式：优点是响应时间快，即确定优先响应的设备所花费的时间少。对优先次序的控制也是相当灵活的
+     - ![ahh](../res/68.jpg)
+- **分布式仲裁**
+  - 分布式仲裁：不需要中央仲裁器，而是多个仲裁器竞争使用总线。当它们有总线请求时，把它们唯一的仲裁号发送到共享的仲裁总线上，每个仲裁器将仲裁总线上得到的号与自己的号进行比较。如果仲裁总线上的号大，则它的总线请求不予响应，并撤消它的仲裁号。最后，获胜者的仲裁号保留在仲裁总线上。显然，分布式仲裁是以优先级仲裁策略为基础
+  - 分布式仲裁示意图
+    - ![ah](../res/70.png)
+  1. 所有参与本次竞争的各主设备将设备竞争号CN取反后打到仲裁总线AB上，以实现“线或”逻辑。AB线低电平时表示至少有一个主设备的CNi为1，AB线高电平时表示所有主设备的CNi为0
+  2. 竞争时CN与AB逐位比较，从最高位（b7）至最低位（b0）以一维菊花链方式进行，只有上一位竞争得胜者Wi+1位为1。当CNi=1，或CNi=0且ABi为高电平时，才使Wi位为1。若Wi=0时，将一直向下传递，使其竞争号后面的低位不能送上AB线
+  3. 竞争不到的设备自动撤除其竞争号。在竞争期间，由于W位输入的作用，各设备在其内部的CN线上保留其竞争号并不破坏AB线上的信息
+  4. 由于参加竞争的各设备速度不一致，这个比较过程反复（自动）进行，才有最后稳定的结果。竞争期的时间要足够，保证最慢的设备也能参与竞争
+  - 裁决过程
+    - 逻辑线仲裁时“线或”，因此只要有一个设备把逻辑“1”送到某个特定的仲裁线上，那么这根线的信号就是“1”，即低电平。每个设备中的裁决逻辑检测仲裁线上的结果，并根据下列规则修改它放到总线上的仲裁号：如果该设备的仲裁号中有某一位为0，而这一位对应的仲裁线信号为“1”，则修改这个仲裁号，使其所有低位都从总线上撤销，也即使所有低位对应的仲裁线送出一个为“0”的信号。这样，具有最高仲裁号的设备将会发现它的仲裁号和留在仲裁线上的好匹配，所以将赢得总线的使用权
+    - ![ahh](../res/71.jpg)
 
+#### 总线的定时和数据传送模式
 
+##### 总线定时
 
+- 总线的信息传送过程：请求总线、总线仲裁、寻址、信息传送、状态返回
+- 定时：事件出现在总线上的时序关系
+  - 同步定时：
+    - ![ahh](../res/72.png)
+    - 事件出现在总线上的时刻由总线时钟信号来确定，一次IO传送被称为时钟周期或总线周期
+    - 由于使用了公共时钟，每个功能模块发送或接受信息的时间都由统一时钟规定，因此，同步定时具有较高的传输频率
+    - 适用于总线长度较短、各功能模块存取时间比较接近的情况。当各功能模块存取时间相差较大时，会大大损失总线效率
+  - 异步定时：
+    - ![ahh](../res/73.png)
+    - 后一时间出现在总线的时刻取决于前一事件的出现，即建立在应答或互锁机制基础上。在这种系统中，不需要统一的公共时钟信号。总线周期长度是可变的
+    - 总线周期长度不变，不把相应时间强加到功能模块上，因而允许快速和慢速的功能模块都链接到同一总线上。但这以增加总线复杂性和成本为代价
 
+## 第七章
+
+### 数据在磁盘上的记录格式
+
+- ![ahh](../res/74.png)
+- 一个扇区**512Byte**
+- 存储密度：存储密度分道密度、位密度和面密度
+  - 道密度：沿磁盘半径方向单位长度上的磁道数，单位为道/英寸
+  - 位密度：磁道单位长度上能记录的二进制代码位数，单位为位/英寸
+  - 面密度：位密度和道密度的乘积，单位为位/平方英寸
+- 存储容量：一个磁盘存储器所能存储的字节总数，称为磁盘存储器的存储容量
+- 存取时间：存取时间是指从发出读写命令后，磁头从某一起始位置移动至新的记录位置，到开始从盘片表面读出或写入信息加上传送数据所需要的时间。取决于以下三个因素决定
+  - 一个是将磁头定位至所要求的磁道上所需的时间，称为找道时间
+  - 第二个是找道完成后至磁道上需要访问的信息到达磁头下的时间，称为等待时间，这两个时间都是随机变化的，因此往往使用平均值来表示，平均找道时间是最大找道时间与最小找道时间的平均值。平均等待时间和磁盘转速有关，它用**磁盘旋转一周所需时间的一半来表示**
+  - 第三个是数据传送时间
+- 数据传输率：磁盘存储器在单位时间内向主机传送数据的字节数，叫数据传输率，传输率与存储设备和主机接口逻辑有关。从主机接口逻辑考虑，应有足够快的传送速度向设备接收/发送信息。从存储设备考虑，假设磁盘旋转速度为n转/秒，每条磁道容量为N个字节，则数据传输率：
+  - Dr=nN(字节/秒) 或Dr=D·v(字节/秒)
+- 内径/外径：**直径**
+
+### 显示器带宽
+
+- 刷新所需带宽=分辨率×每个像素点颜色深度×刷新速率
+
+## 第八章
+
+### 信息交换方式
+
+- 程序查询方式
+- 程序中断方式
+- DMA方式
+- 通道方式
+
+#### 程序查询方式
+
+- ![ahh](../res/75.png)
+
+1. 设备编址
+   - 统一编址
+   - 独立编址
+2. 输入输出指令
+3. 程序查询接口
+   - 设备选择电路
+   - 数据缓冲寄存器
+   - 设备状态寄存器
+
+#### 程序中断方式
+
+##### 中断的概念、功能
+
+- 中断（Interrupt）是指CPU暂时中止现行程序，转去处理随机发生的紧急事件，处理完后自动返回原程序的功能和技术。中断系统是计算机实现中断功能的软硬件总称。一般在CPU中设置中断机构，在外设接口中设置中断控制器，在软件上设置相应的中断服务程序
+  - 中断系统的功能包括：
+    1. 实现主机和外设的并行工作
+    2. 处理故障
+    3. 实现多道程序和分时操作
+    4. 实时控制
+    5. 实现人机联系
+    6. 实现多机通信
+  - 中断源：能够向CPU发出中断请求的事件。常见中断源有：
+    - 输入、输出设备中断。如键盘、打印机等工作过程中已做好接收或发送准备
+    - 数据通道中断。如磁盘、磁带等要同主机进行数据交换等
+    - 实时时钟中断
+    - 故障中断。例如电源掉电、设备故障等要求CPU进行紧急处理等
+    - 系统中断。如运算过程出现溢出、数据格式非法，数据传送过程出现校验错，控制器遇到非法指令等等
+    - 为了调试程序而设置的中断
+  - 中断处理过程注意几个问题：
+    - 响应中断时机：外界中断请求时随机的，但CPU只有在当前指令执行完毕后，才转至公操作
+    - 断点保护问题（PC，寄存器内容和状态的保存）
+    - 原子操作：开中断和关中断问题
+    - 中断是由软硬件结合起来实现的
+    - ![ahh](../res/77.png)
+
+##### 程序中断方式的基本接口
+
+- 设备选择器。设备选择器用来判别总线上送出的地址（或称呼叫的设备）是否为本设备，它实际上是设备地址的译码比较电路。
+- BS外设接口忙（BuSy）标志
+- RD外设准备就绪（ReaDy）标志
+- EI（Enable Interrupt中断允许触发器）
+- IR（Interrupt Request）中断请求触发器
+- IM（Interrupt Mask）中断屏蔽触发器
+- ![ahh](../res/78.png)
+  1. 表示由程序启动外设，将该外设接口的“忙”标志BS置“1”，“准备就绪”标志RD清“0”；
+  2. 表示接口向外设发出启动信号；
+  3. 表示数据由外设传送到接口的缓冲寄存器；
+  4. 表示当设备动作结束或缓冲寄存器数据填满时，设备向接口送出一控制信号，将数据“准备就绪”标志RD置“1”；
+  5. 表示允许中断标志EI为“1”时，接口向CPU发出中断请求信号；
+  6. 表示在一条指令执行末尾CPU检查中断请求线，将中断请求线的请求信号接收到“中断请求”标志IR；
+  7. 表示如果“中断屏蔽”标志IM为“0”时，CPU在一条指令执行结束后受理外设的中断请求，向外设发出响应中断信号并关闭中断；
+  8. 表示转向该设备的中断服务程序入口；
+  9. 表示在中断服务程序通过输入指令把接口中数据缓冲寄存器的数据读至CPU中的寄存器；
+  10. 表示CPU发出控制信号C将接口中的BS和RD标志复位。
+
+##### 单级中断
+
+- 所有中断源属于同一级，离CPU越近，优先级越高，图8.7类似于第六章的链式查询方式。
+- **中断源的识别**：串行排队链法
+  - ![ahh](../res/79.png)
+  - IR1，IR2，IR3为中断请求信号
+  - IS1，IS2，IS3为中断选中信号
+  - INTI为中断排队输入
+  - INTO为中断排队输出
+- 中断向量的产生
+  - 向量地址转移法
+- 中断向量：
+  - 当CPU响应中断时，由硬件直接产生一个固定的地〗址(即向量地址)
+  - 由向量地址指出每个中断源设备的中断服务程序入口，这种方法通常称为向量中断
+
+##### 多级中断
+
+- ![ahh](../res/80.png)
+- 概念
+  - 每级有一个中断优先权
+  - 一维多级中断和二维多级中断
+  - 说明：
+    - 一个系统有n级中断，则CPU中有n个IR，n个IM，某级中断被响应后，则关闭本级和低于本级的IM，开放更高级的IM。
+    - 多级中断可以嵌套，但同一级的中断不允许嵌套
+    - 中断响应时，确定哪一级中断和中断源采用硬件实现。采用了独立请求方式和链式查询方式相结合的方式。
+    - 使用多级堆栈保存现场（包括IM）
+- 多级中断源的识别
+  - 中断优先排队电路
+  - 中断向量产生电路
+  - ![ahh](../res/81.png)
+- 中断屏蔽
+  - 整级屏蔽：设置IM
+  - 单个源屏蔽：EI
+
+#### DMA方式
+
+##### DMA方式的一般概念
+
+- 直接存储器访问（Direct Memory Address）DMA方式是为了在主存储器与I/O设备间高速交换批量数据而设置的。
+- 基本思想是：通过硬件控制实现主存与I/O设备间的直接数据传送，在传送过程中无需CPU的干预。数据传送是在DMA控制器控制下进行的，
+- 优点：速度快。有利于发挥CPU的效率。
+- 过程描述：
+  - 由DMA控制器给出当前正在传送的数据的主存地址，并统计传送数据的个数以确定一组数据的传送是否已结束。在主存中要开辟连续地址的专用缓冲器，用来提供或接收传送的数据。在数据传送前和结束后要通过程序或中断方式对缓冲器和DMA控制器进行预处理和后处理。
+
+##### DMA传送方式
+
+1. CPU暂停方式
+   - 主机响应DMA请求后，让出存储总线，直到一组数据传送完毕后，DMA控制器才把总线控制权交还给CPU，采用这种工作方式的I/O设备，在其接口中一般设置有小容量存储器，I/O设备先与小容量存储器交换数据，然后由小容量存储器与主机交换数据，这样可减少DMA传送占用存储总线的时间，也即减少了CPU暂停工作的时间
+   - ![agg](../res/82.png)
+   - 优点: 控制简单，它适用于数据传输率很高的设备进行成组传送。
+   - 缺点: 在DMA控制器访内阶段，内存的效能没有充分发挥，相当一部分内存工作周期是空闲的。这是因为，外围设备传送两个数据之间的间隔一般总是大于内存存储周期，即使高速I/O设备也是如此。
+2. 周期挪用方式
+   - DMA控制器与主存储器之间传送一个数据，占用（窃取）一个CPU周期，即CPU暂停工作一个周期，然后继续执行程序
+   - ![ahh](../res/83.png)
+   - 如果CPU的工作周期比内存存取周期长很多，可以采用该种方法
+   - 总线控制权的转移速度快，DMA效率高
+   - ![ahh](../res/84.png)
+
+##### DMA传送一个数据的过程
+
+1. DMA基本构成
+   - ![ahh](../res/85.png)
+     1. 内存地址计数器: 用于存放内存中要交换的数据的地址。在DMA传送前，须通过程序将数据在内存中的起始位置(首地址)送到内存地址计数器。而当DMA传送时，每交换一次数据，将地址计数器加“1”，从而以增量方式给出内存中要交换的一批数据的地址
+     2. 字计数器: 用于记录传送数据块的长度(多少字数)。其内容也是在数据传送之前由程序预置，交换的字数通常以补码形式表示。在DMA传送时，每传送一个字，字计数器就加“1” ，当计数器溢出即最高位产生进位时，表示这批数据传送完毕，于是引起DMA控制器向CPU发中断信号
+     3. 数据缓冲寄存器: 用于暂存每次传送的数据(一个字)。当输入时，由设备(如磁盘)送往数据缓冲寄存器，再由缓冲寄存器通过数据总线送到内存。反之，输出时，由内存通过数据总线送到数据缓冲寄存器，然后再送到设备
+     4. “DMA请求”标志: 每当设备准备好一个数据字后给出一个控制信号，使“DMA请求” 标志置“1”。该标志置位后向“控制/状态”逻辑发出DMA请求，后者又向CPU发出总线使用权的请求(HOLD)，CPU响应此请求后发回响应信号HLDA，“控制/状态”逻辑接收此信号后发出DMA响应信号，使“DMA请求”标志复位，为交换下一个字做好准备
+     5. “控制/状态”逻辑: 由控制和时序电路以及状态标志等组成，用于修改内存地址计数器和字计数器，指定传送类型(输入或输出)，并对“DMA请求”信号和CPU响应信号进行协调和同步
+     6. 中断机构: 当字计数器溢出时(全0)，意味着一组数据交换完毕，由溢出信号触发中断机构，向CPU提出中断报告。这里的中断与上一节介绍的I/O中断所采用的技术相同，但中断的目的不同，前面是为了数据的输入或输出，而这里是为了报告一组数据传送结束。因此它们是I/O系统中不同的中断事件
+2. 传送过程
+   - 当外设有DMA请求时，通常CPU在本机器周期结束后，响应DMA请求
+   - ![ahh](../res/86.png)
+   - 传送一个数据块可以分为三个阶段。
+     - 第一阶段是进行初始化，即CPU通过程序I/O的方式给DMA控制器预置初值，取状态和送传送需要的有关参数。
+     - 第二阶段由DMA控制器控制外设与主存之间的数据交换。
+     - 第三阶段即CPU中断原程序后进行后处理。若需要继续交换数据，则又要对DMA进行初始化；若不需要交换数据，则停止外设；若为出错，则转错误诊断及处理程序
+
+##### 选择型和多路型DMA控制器
+
+- 选择型
+  - ![ahh](../res/87.png)
+- 多路型
+  - ![ahh](../res/88.png)
+- 典型DMA芯片
+  - ![ahh](../res/89.png)
+
+#### 通道方式
+
+- 通道的基本概念
+  - 通道”是计算机系统中代替CPU管理控制外设的独立部件，是一种能执行有限I／O指令集合—通道命令的I／O处理机
+  - 在通道控制方式中，一个主机可以连接几个通道。每个通道又可连接多台I／O设备，这些设备可具有不同速度，可以是不同种类。这种输入输出系统增强了主机与通道操作的并行能力以及各通道之间、同一通道的各设备之间的并行操作能力。同时也为用户提供了增减外围设备的灵活性
+  - 采用通道方式组织输入输出系统，多使用主机—通道—设备控制器—I／O设备四级连接方式。
+  - 在CPU启动通道后，通道自动地去内存取出通道指令并执行指令。直到数据交换过程结束向CPU发出中断请求，进行通道结束处理工作
+
+##### 通道的功能
+
+- 执行通道指令，组织外围设备和内存进行数据传输，按I/O指令要求启动外围设备，向CPU报告中断等，具体有以下五项任务
+  1. 接受CPU的I/O指令，按指令要求与指定的外围设备进行通信
+  2. 从内存选取属于该通道程序的通道指令，经译码后向设备控制器和设备发送各种命令
+  3. 组织外围设备和内存之间进行数据传送，并根据需要提供数据缓存的空间，以及提供数据存入内存的地址和传送的数据量
+  4. 从外围设备得到设备的状态信息，形成并保存通道本身的状态信息，根据要求将这些状态信息送到内存的指定单元，供CPU使用
+  5. 将外围设备的中断请求和通道本身的中断请求，按次序及时报告CPU
+- 通道工作过程
+  - 在一般用户程序中，通过调用通道来完成一次数据输入输出的过程如图所示
+  - CPU执行用户程序和管理程序，通道处理机执行通道程序的时间关系如图所示
+  - ![ahh](../res/90.png)
+- 主要过程分为如下三步进行：
+  1. 在用户程序中使用访管指令进入管理程序，由CPU通过管理程序组织一个通道程序，并启动通道。
+  2. 通道处理机执行CPU为它组织的通道程序．完成指定的数据输入输出工作
+  3. 通道程序结束后向CPU发中断请求。CPU响应这个中断请求后，第二次进入操作系统，调用管理程序对输入输出中断请求进行处理。
+- 通道的种类
+  - 选择通道
+    - 选择通道每次只能从所连接的设备中选择一台I／O设备的通道程序，此刻该通道程序独占了整个通道。连接在选择通道上的若干设备，只能依次使用通道与主存传送数据
+    - 数据传送以成组（数据块）方式进行，每次传送一个数据块，因此，传送速率很高。选择通道多适合于快速设备（磁盘），这些设备相邻字之间的传送空闲时间极短
+  - 字节多路通道 （Byte Multiplexor Channel）  
+    - 是一种简单的共享通道，在时间分割的基础上，服务于多台低速和中速面向字符的外围设备。
+    - 字节多路通道包括多个子通道，每个子通道服务于一个设备控制器，可以独立地执行通道指令。每个子通道都需要有字符缓冲寄存器、I／O请求标志／控制寄存器、主存地址寄存器和字节计数寄存器。而所有于通道的控制部分是公共的，由所有子通道所共享。通常，每个通道的有关指令和参量存放在主存固定单元中。当通道在逻辑上与某一设备连通时，将这些指令和参量取出来，送入公共控制部分的寄存器中使用。
+    - 字节多路通道要求每种设备分时占用一个很短的时间片，不同的设备在各自分得的时间片内与通道建立传输连接，实现数据的传送
+  - 数组多路通道（Block Multiplexor Channel）
+    - 数组多路通道把字节多路通道和选择通道的特点结合起来。它有多个子通道，既可以执行多路通道程序，象字节多路通道那样，所有子通道分时共享总通道；又可以用选择通道那样的方式传送数据。
+  - 数组多路通道和字节多路通道的比较
