忘了更新了什么

--- a/2019A/计组.md
+++ b/2019A/计组.md
@@ -29,15 +29,15 @@
 
 - S：浮点数的符号位，1 位，0表示正数，1表示负数。
 - M：尾数，23/52位(32/64位浮点数)，小数表示，小数点放在尾数域的最前面。
-- E：阶码8/11位(32/64位浮点数),阶符采用隐含方式，即采用移码方式来表示正负指数。移码方法对两个指数大小的比较和对阶操作都比较方便，因为阶码域值大者其指数值也大。采用这种方式时，将浮点数的指数真值e变成阶码Ｅ 时，应将指数e 加上一个固定的偏移值127(01111111)/1023，(01111111111)即
+- E：阶码8/11位(32/64位浮点数),阶符采用隐含方式，即采用移码方式来表示正负指数。移码方法对两个指数大小的比较和对阶操作都比较方便，因为阶码域值大者其指数值也大。采用这种方式时，将浮点数的指数真值e变成阶码Ｅ 时，应将指数e 加上一个固定的偏移值127(01111111)/1023(01111111111)即
                           E＝e＋127       (32位浮点数)
                           E＝e＋1023     (64位浮点数)
-　　IEEE754 标准中，一个规格化的32位浮点数ｘ的真值可表示为
-　　　　$ x＝(－1)s×(1.M)×2^{E－127}　　　 　e＝E－127 $
-　　一个规格化的64位浮点数ｘ的真值为
-　　　　$ x＝(－1)s×(1.M)×2^{E－1023} 　　  e＝E－1023 $
+　　IEEE754 标准中，一个规格化的32位浮点数x的真值可表示为
+　　　　$ x＝(-1)^s×(1.M)×2^{E-127}　　　 　e＝E-127 $
+　　一个规格化的64位浮点数x的真值为
+　　　　$ x＝(-1)^s×(1.M)×2^{E-1023} 　　  e＝E-1023 $
 - 规格化表示：尾数域最高有效位要为1
-  - $ 1.1xxx,0.1xxx $
+  - 尾数五位有效位：$ +1.xxxx, -1.xxxx $
 
 ### 各种码
 
