--- a/2019A/编译.md
+++ b/2019A/编译.md
@@ -88,3 +88,50 @@ A→β (或A ::＝ β)
   1. 对每一个正规文法G,都存在一个FA,M,使得L(M)=L(G)；
   2. 对每一个FA,M,都存在一个GR和GL,使得L(M)=L(GR)=L(GL)
 
+## 四
+
+### 语法分析器的功能
+
+- **按文法的产生式,识别输入符号串是否为一个句子**
+- **建立一棵与输入串相匹配的语法分析树**
+
+- 语法分析树
+  - 格式化的程序
+  - 合法的表达式、语句、函数
+- 出错处理要求
+  - 尽快发现错误，准确定位，
+  - 可能时进行恢复处理，继续语法分析
+- top  down   parsing：推导
+- bottom up parsing：归约
+  
+### 自顶向下语法分析
+
+#### 基本思想
+
+- 从文法的开始符号出发,向下推导出句子；
+- 试图用一切可能的办法,从文法开始符号出发,自上而下地为输入串建立一课语法树；(寻找一个最左推导)
+- 此分析过程本质上是一种试探过程。
+- 非确定的自上而下分析法实际上采用的是一种穷尽一切可能的试探法
+
+#### 遇到的主要问题
+
+1. 无限循环
+    当文法中出现左递归时，分析过程将陷入无限循环；
+2. 回溯
+   如果对同一个非终结符号，存在若干个候选，例如
+       $A → e \alpha _1|e\alpha _2|...|\alpha _m$
+   则推导过程中，如果候选选择错误，将导致回溯
+3. 虚假匹配
+4. 难以定位出错位置
+5. 效率低下
+
+#### 文法的左递归和回溯的消除
+
+1. 文法左递归的消除
+   - 左递归：
+   - 对于某些 A ，存在推导  $A =^+> A\alpha $
+
+2. 直接左递归的消除方法①：
+   - 引入新的非终结符 A’
+     - 将$A→A\alpha｜β $替换为$ A→βA'$和$A'→\alpha A'｜ε$
+
