--- a/2019B/编译.md
+++ b/2019B/编译.md
@@ -135,3 +135,37 @@ A→β (或A ::＝ β)
    - 引入新的非终结符 A’
      - 将$A→A\alpha｜β $替换为$ A→βA'$和$A'→\alpha A'｜ε$
 
+3. LL(1)
+   - 条件
+     - 一个上下文无关文法G是LL(1)文法，当且仅当G中的每个非终结符A的任何两个不同的规则$A→\alpha | \beta $都满足$ SELECT( A→\alpha )\cap SELECT( A→\beta ) = Φ $，并且$\alpha,\beta$中至多只有一个能推导出ε。
+   - LL（1）中：
+     - 第一个L表示从左到右扫描输入串
+     - 第二个L表示分析使用最左推导
+     - 1表示分析时每一步只需向前看一个符号即可决定所选用的规则，而且这种选择是准确无误的。
+4. 递归下降分析程序的构造:
+   - 每一个非终结符的子程序的构造：
+   - 当该非终结符的规则有多个时，按LL(1)文法的条件能唯一地选择一个候选规则(即确定程序的分支)
+5. 预测分析程序法
+   - 使用一张分析表和一个栈来实现LL(1)分析
+   - 预测分析表M[A,a]是一个矩阵，行代表非终结符，列代表终结符或$’；矩阵元素代表对应的产生式或出错标志
+   - 栈STACK中存放文法符号，栈底先放一个结束符‘$’
+   - 通用结构和控制算法
+     - 适用于各种语言的处理
+   - 分析表内容不同
+     - 不同语言使用内容不同的分析表
+   - 优点：
+     - 效率高
+     - 便于维护、自动生成
+6. 适用情况
+   - 递归下降：LL(1)
+   - 预测分许：LL(1)
+   - 算符优先：有优先级
+   - LR：大多无二义性上下文无关文法
+
+## 功能
+
+1. 词法分析，对构成源程序的字符串进行扫描和分解，识别出一个个的单词；
+2. 语法分析，根据语言的语法规则，把单词符号串组合成各类语法单位；
+3. 语义分析与中间代码产生，即对各类语法单位，分析其含义并进行初步翻译；
+4. 代码优化，对代码进行等价变换，以期产生更高效的代码；
+5. 目标代码生成，把中间代码变换成特定机器上的低级语言指令形式。
