--- a/2019A/汇编.md
+++ b/2019A/汇编.md
@@ -545,7 +545,7 @@ seg_name ENDS
 5. 转中断处理程序；
 6. 中断返回到INT指令的下一条指令。
 
-### DOS 功能调用(21H)存取中断向量：
+### DOS 功能调用(21H)存取中断向量
 
 - 设置中断向量:
   1. AH=25H
@@ -558,7 +558,7 @@ seg_name ENDS
   3. INT 21H
   4. 返回时送 ES:BX=中断向量
 
-### 中断程序的编写步骤：
+### 中断程序的编写步骤
 
 - 主程序：
   1. 设置中断向量
