--- a/2019B/编译.md
+++ b/2019B/编译.md
@@ -70,7 +70,7 @@ A→β (或A ::＝ β)
 
 1. 正规文法到正规式的转换
    - 将文法中的规则写成关于每个非终结符的正规式方程，得到一个方程组
-   - 若A=αA |β，则解为A= α*β
+   - 若A=αA | β，则解为A= α* β
 
 ### DFA
 
@@ -79,6 +79,7 @@ A→β (或A ::＝ β)
     - Q是有限状态集，是输入字符的字母表，
     - δ是Q×Σ到Q的单值部分映射（即状态转换）δ(qi,a)=qj
     - S∈Q是唯一初态， F 是终态集（可空）
+    - f 是一个$Q\times \Sigma$ 到Q的单值映射
 
 ### 正规文法与有穷自动机的等价性
 
